--- a/lol-map/package.json
+++ b/lol-map/package.json
@@ -10,13 +10,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
+    "@tweenjs/tween.js": "^21.0.0",
+    "@types/three": "^0.158.2",
     "request": "^2.88.2",
+    "three": "^0.158.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@types/leaflet": "^1.9.7",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
